--- a/media-source/SourceBufferList-index.html
+++ b/media-source/SourceBufferList-index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>Fired events of SourceBufferList</title>
+  <title>Test for SourceBufferList#SourceBuffer</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -33,26 +33,25 @@ function test(mime) {
             return;
         }
         var mediaSource = new MediaSource();
-        var events = [];
         mediaSource.addEventListener('sourceopen', function(e) {
-            var sourceBuffer = mediaSource.addSourceBuffer(mime);//addsourcebuffer event should be fired
-            mediaSource.removeSourceBuffer(sourceBuffer);//removesourcebuffer event should be fired
-            mediaSource.endOfStream();
-        });
-        mediaSource.sourceBuffers.addEventListener('addsourcebuffer', function(e) {
-            events.push('addsourcebuffer');
-        });
-        mediaSource.sourceBuffers.addEventListener('removesourcebuffer', function(e) {
-            events.push('removesourcebuffer');
-        });
-        mediaSource.addEventListener('sourceended', function(e) {
             t.step(function() {
-                assert_array_equals(events, ['addsourcebuffer', 'removesourcebuffer']);
+                assert_equals(mediaSource.sourceBuffers[0], undefined,
+                              'If index is equal to the length attribute then return undefined.');
+                assert_equals(mediaSource.sourceBuffers[1], undefined,
+                              'If index is greater than the length attribute then return undefined.');
+
+                var sourceBuffer = mediaSource.addSourceBuffer(mime);
+                assert_equals(mediaSource.sourceBuffers[0], sourceBuffer,
+                              'Should return the index\'th SourceBuffer object in the list.');
+                assert_equals(mediaSource.sourceBuffers[1], undefined,
+                              'If index is equal to the length attribute then return undefined.');
+                assert_equals(mediaSource.sourceBuffers[2], undefined,
+                              'If index is greater than the length attribute then return undefined.');
             });
             t.done();
         });
         video.src = window.URL.createObjectURL(mediaSource);
-    }, 'Check the fired events of SourceBufferList for (' + mime + ')');
+    }, 'SourceBufferList#SourceBuffer (' + mime + '): Check the behavior with the specified index parameter.');
 }
 mimes.forEach(function(mime) {
     test(mime);
