--- a/media-source/SourceBuffer-appendBuffer-updating.html
+++ b/media-source/SourceBuffer-appendBuffer-updating.html
@@ -13,10 +13,21 @@
 <div id="log"></div>
 
 <script>
-var FILE = '/media/white.webm';
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var contents = {'/media/white.webm' : 'video/webm; codecs="vorbis,vp8"',
+                '/media/white.mp4'  : 'video/mp4'};
 
+//check the browser supports the MIME used in this test
+function canPlayType(mime) {
+    if(video.canPlayType(mime) != 'probably') {
+        this.step(function() {
+            assert_unreached("Browser doesn't support the MIME used in this test: " + mime);
+        });
+        this.done();
+        return false;
+    }
+    return true;
+}
 function GET(url, processBody) {
     var xhr = new XMLHttpRequest();
     xhr.open('GET', url, true);
@@ -30,35 +41,43 @@ function GET(url, processBody) {
         processBody(new Uint8Array(xhr.response));
     };
 }
-async_test(function(t) {
-    GET(FILE, function(data) {
-        var mediaSource = new MediaSource();
-        mediaSource.addEventListener('sourceopen', function(e){
-            var sourceBuffer = mediaSource.addSourceBuffer(mime);
-            var updatings = [];
-            sourceBuffer.addEventListener('updatestart', function(e) {
-                updatings.push(sourceBuffer.updating);
-            });
-            sourceBuffer.addEventListener('update', function(e) {
-                updatings.push(sourceBuffer.updating);
-            });
-            sourceBuffer.addEventListener('updateend', function(e) {
-                updatings.push(sourceBuffer.updating);
-                t.step(function() {
-                    assert_array_equals(updatings,
-                                        [false, true, true, false, false],
-                                        'Check the transition of the updating attribute');
+function test(file, mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        GET(file, function(data) {
+            var mediaSource = new MediaSource();
+            mediaSource.addEventListener('sourceopen', function(e) {
+                var sourceBuffer = mediaSource.addSourceBuffer(mime);
+                var updatings = [];
+                sourceBuffer.addEventListener('updatestart', function(e) {
+                    updatings.push(sourceBuffer.updating);
                 });
-                t.done();
+                sourceBuffer.addEventListener('update', function(e) {
+                    updatings.push(sourceBuffer.updating);
+                });
+                sourceBuffer.addEventListener('updateend', function(e) {
+                    updatings.push(sourceBuffer.updating);
+                    t.step(function() {
+                        assert_array_equals(updatings,
+                                            [false, true, true, false, false],
+                                            'Check the transition of the updating attribute');
+                    });
+                    t.done();
+                });
+                updatings.push(sourceBuffer.updating);
+                sourceBuffer.appendBuffer(data);
+                updatings.push(sourceBuffer.updating);
             });
-            updatings.push(sourceBuffer.updating);
-            sourceBuffer.appendBuffer(data);
-            updatings.push(sourceBuffer.updating);
+            video.src = window.URL.createObjectURL(mediaSource);
         });
-        video.src = window.URL.createObjectURL(mediaSource);
-    });
-}, 'SourceBuffer#appendBuffer(data) : Check the transition of updating attribute.');
-
+    }, 'SourceBuffer#appendBuffer(data) (' + mime + '): ' +
+       'Check the transition of updating attribute.');
+}
+for(var file in contents) {
+    test(file, contents[file]);
+}
 </script>
 </body>
 </html>
