--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/support/popup-with-frames.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/support/popup-with-frames.html
@@ -17,3 +17,4 @@
     <frame src="popup-with-frames-01.html" id="frame_1"></frame>
     <frame src="popup-with-frames-02.html" id="frame_2"></frame>
 </frameset>
+</html>
