--- a/media-source/MediaSource-addSourceBuffer_unsupportedMIME.html
+++ b/media-source/MediaSource-addSourceBuffer_unsupportedMIME.html
@@ -11,29 +11,26 @@
     <video id='v' controls autoplay width='320' height='240'></video>
 </div>
 <div id="log"></div>
-
 <script>
-var FILE = '/media/white.webm';
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
 async_test(function(t) {
     var mediaSource = new MediaSource();
-    mediaSource.addEventListener('sourceopen', function(e){
+    mediaSource.addEventListener('sourceopen', function(e) {
         var sourceBuffer = null;
         t.step(function() {
-            assert_throws(
-                {name : 'NotSupportedError'},
-                function() {
-                    sourceBuffer = mediaSource.addSourceBuffer('text/html');
-                },
-                'Set invalid MIME'
-            );
+            assert_throws({name : 'NotSupportedError'},
+                          function() {
+                              sourceBuffer = mediaSource.addSourceBuffer('text/html');
+                          },
+                          'Set invalid MIME');
         });
         t.done();
     }, false);
     video.src = window.URL.createObjectURL(mediaSource);
-}, 'MediaSource#addSourceBuffer : If type contains a MIME type that is not supported or contains a MIME type that is not supported with the types specified for the other SourceBuffer objects in sourceBuffers, then throw a NOT_SUPPORTED_ERR exception and abort these steps.');
-
+}, 'MediaSource#addSourceBuffer : If type contains a MIME type that is not supported ' +
+   'or contains a MIME type that is not supported with the types specified for the ' +
+   'other SourceBuffer objects in sourceBuffers, then throw a NOT_SUPPORTED_ERR ' +
+   'exception and abort these steps.');
 </script>
 </body>
 </html>
