--- a/media-source/MediaSource-endOfStream_updating.html
+++ b/media-source/MediaSource-endOfStream_updating.html
@@ -10,13 +10,23 @@
 <div>
     <video id='v' controls autoplay width='320' height='240'></video>
 </div>
-
 <div id="log"></div>
-
 <script>
-var FILE = '/media/white.webm';
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var contents = {'/media/white.webm': 'video/webm; codecs="vorbis,vp8"',
+                '/media/white.mp4' : 'video/mp4'};
+
+//check the browser supports the MIME used in this test
+function canPlayType(mime) {
+    if(video.canPlayType(mime) != 'probably') {
+        this.step(function() {
+            assert_unreached("Browser doesn't support the MIME used in this test: " + mime);
+        });
+        this.done();
+        return false;
+    }
+    return true;
+}
 function GET(url, processBody) {
     var xhr = new XMLHttpRequest();
     xhr.open('GET', url, true);
@@ -30,26 +40,35 @@ function GET(url, processBody) {
         processBody(new Uint8Array(xhr.response));
     };
 }
-async_test(function(t) {
-    GET(FILE, function(data) {
-        var mediaSource = new MediaSource();
-        mediaSource.addEventListener('sourceopen', function(e){
-            var sourceBuffer = mediaSource.addSourceBuffer(mime);
-            sourceBuffer.addEventListener('updatestart', function(e) {
-                t.step(function() {
-                    assert_throws({name : 'InvalidStateError'},
-                                  function() {
-                                      mediaSource.endOfStream();
-                                  });
+function test(file, mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        GET(file, function(data) {
+            var mediaSource = new MediaSource();
+            mediaSource.addEventListener('sourceopen', function(e) {
+                var sourceBuffer = mediaSource.addSourceBuffer(mime);
+                sourceBuffer.addEventListener('updatestart', function(e) {
+                    t.step(function() {
+                        assert_throws({name : 'InvalidStateError'},
+                                      function() {
+                                          mediaSource.endOfStream();
+                                      });
+                    });
+                    t.done();
                 });
-                t.done();
+                sourceBuffer.appendBuffer(data);
             });
-            sourceBuffer.appendBuffer(data);
-        }, false);
-        video.src = window.URL.createObjectURL(mediaSource);
-    });
-}, "MediaSource#endOfStream : If the updating attribute equals true on any SourceBuffer in sourceBuffers, then throw an INVALID_STATE_ERR exception and abort these steps.");
-
+            video.src = window.URL.createObjectURL(mediaSource);
+        });
+    }, 'MediaSource#endOfStream (' + mime + ') : ' +
+       'If the updating attribute equals true on any SourceBuffer in sourceBuffers, ' +
+       'then throw an INVALID_STATE_ERR exception and abort these steps.');
+}
+for(var file in contents) {
+    test(file, contents[file]);
+}
 </script>
 </body>
 </html>
