--- a/media-source/MediaSource-removeSourceBuffer_no-relationship.html
+++ b/media-source/MediaSource-removeSourceBuffer_no-relationship.html
@@ -11,35 +11,51 @@
     <video id='v' controls autoplay width='320' height='240'></video>
 </div>
 <div id="log"></div>
-
 <script>
-var FILE = '/media/white.webm';
 var video = document.querySelector('video');
-var mime = 'video/webm; codecs="vorbis,vp8"';
+var mimes = ['video/webm; codecs="vorbis,vp8"', 'video/mp4'];
 
-async_test(function(t) {
-    var mediaSource1 = new MediaSource();
-    mediaSource1.addEventListener('sourceopen', function(e){
-        var sourceBuffer1 = mediaSource1.addSourceBuffer(mime);
-        var mediaSource2 = new MediaSource();
-        mediaSource2.addEventListener('sourceopen', function(e){
-            var sourceBuffer2 = mediaSource2.addSourceBuffer(mime);
-            t.step(function() {
-                assert_throws(
-                    {name : 'NotFoundError'},
-                    function() {
-                        mediaSource2.removeSourceBuffer(sourceBuffer1);
-                    },
-                    'Remove sourceBuffer which is created by mediaSource2');
-            });
-            t.done();
+//check the browser supports the MIME used in this test
+function canPlayType(mime) {
+    if(video.canPlayType(mime) != 'probably') {
+        this.step(function() {
+            assert_unreached("Browser doesn't support the MIME used in this test: " + mime);
         });
-        var video2 = document.createElement('video');
-        video2.src = window.URL.createObjectURL(mediaSource2);
-    }, false);
-    video.src = window.URL.createObjectURL(mediaSource1);
-}, 'MediaSource#removeSouceBuffer : If sourceBuffer specifies an object that is not in sourceBuffers then throw a NOT_FOUND_ERR exception and abort these steps.');
-
+        this.done();
+        return false;
+    }
+    return true;
+}
+function test(mime) {
+    async_test(function(t) {
+        if(!canPlayType.bind(t)(mime)) {
+            return;
+        }
+        var mediaSource1 = new MediaSource();
+        mediaSource1.addEventListener('sourceopen', function(e) {
+            var sourceBuffer1 = mediaSource1.addSourceBuffer(mime);
+            var mediaSource2 = new MediaSource();
+            mediaSource2.addEventListener('sourceopen', function(e) {
+                var sourceBuffer2 = mediaSource2.addSourceBuffer(mime);
+                t.step(function() {
+                    assert_throws({name : 'NotFoundError'},
+                                  function() {
+                                      mediaSource2.removeSourceBuffer(sourceBuffer1);
+                                  },
+                                  'Remove sourceBuffer which is created by mediaSource2');
+                });
+                t.done();
+            });
+            var video2 = document.createElement('video');
+            video2.src = window.URL.createObjectURL(mediaSource2);
+        }, false);
+        video.src = window.URL.createObjectURL(mediaSource1);
+    }, 'MediaSource#removeSouceBuffer (' + mime + ') : ' +
+       'If sourceBuffer specifies an object that is not in sourceBuffers then throw a NOT_FOUND_ERR exception and abort these steps.');
+}
+mimes.forEach(function(mime) {
+    test(mime);
+});
 </script>
 </body>
 </html>
